Cascade_Git_Test2/src/objects/Office_Supplies__c.object
<CustomObject>
    <description>Listing of necessary office supplies.</description>
    <fields>
        <fullName>Commit_Amount__c</fullName>
        <label>Commit Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <description>Purchase Order Number Assigned to Supply Name</description>
        <inlineHelpText>This purchase Order number matches with the supply name.</inlineHelpText>
        <label>Purchase Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Remaining_Staplers__c</fullName>
        <label>Remaining Staplers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Budget__c</fullName>
        <inlineHelpText>Annual Budget allocated to Supplies</inlineHelpText>
        <label>Supply Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Office Supplies</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office Supplies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Commit_Amount</fullName>
        <active>true</active>
        <description>Number can be increased but not decreased</description>
        <errorConditionFormula>PRIORVALUE(Commit_Amount__c) &gt; Commit_Amount__c</errorConditionFormula>
        <errorDisplayField>Commit_Amount__c</errorDisplayField>
        <errorMessage>Value may be increased but not decreased.</errorMessage>
    </validationRules>
</CustomObject>